# Embedded-AI-Edge-Gateway

./: CMakeLists.txt  README.md
docs/: architecture.md
src/: CMakeLists.txt  main.cpp
src/capture/: CMakeLists.txt
src/control/: CMakeLists.txt
src/core/: CMakeLists.txt
src/dispatcher/: CMakeLists.txt
src/inference/: CMakeLists.txt
src/main/: CMakeLists.txt  Main.qml  main.cpp
src/plugins/: CMakeLists.txt
src/speech/: CMakeLists.txt
src/ui/: CMakeLists.txt  Main.qml  mainwindow.ui
src/ui/components/: HeaderBar.qml  LogViewer.qml
src/ui/pages/: BehaviorPage.qml  CapturePage.qml  CorePage.qml  DispatcherPage.qml  InferencePage.qml  PluginsPage.qml  SpeechPage.qml
src/ui/qml/: main.qml  qmldir
src/ui/resources/: qml.qrc
src/ui/widgets/: VideoPanel.qml
